# rag-document-handler

./: .env.example  .gitignore  DEVELOPMENT_RULES.md  Dockerfile  LICENSE  README.md  app.py  check_current_state.py  check_documents.py  check_upload_state.py  clean_for_test.py  clean_upload_state.py  cleanup_broken.py  cleanup_orphaned.py  debug_clean_counts.py  debug_deletion.py  debug_document_counts.py  debug_document_structure.py  debug_email_scheduler.py  debug_filename_issue.py  debug_sub_urls.py  debug_url_data.py  docker-compose.yml  email_accounts.py  email_ingestion.py  main.py  pyproject.toml  setup.sh  setup_playwright.sh  start.sh  status.sh  test_corrected_smart_batch.py  test_document_retrieval.py  test_email_manual.py  test_file_status_fix.py  test_milvus_interface.py  test_search_logic.py  test_smart_batch.py  test_upsert_fix.py  test_url_deletion.py  (+2 more)
.github/workflows/: release.yml
containers/ollama/: id_ed25519  id_ed25519.pub
docs/: README.md  architecture.md  configuration.md  contributing.md  database-schema.md  document-ingest-poc.md  document_module_architecture.md  email-processing.md  exchange_ingestion.md  gmail_ingestion.md  hybrid-retrieval-integration.md  implementation-summary.md  installation.md  missing-functionality-analysis.md  postgresql_guide.md  realm_tiles_prompt.md  roadmap.md  template-architecture.md  url-snapshots-checklist.md  usage.md
examples/: Email-ETL-Process.ipynb  rag_rag_pipeline_clean.ipynb
ingestion/: __init__.py  database_manager.py  postgres_manager.py  postgresql_email_manager.py  postgresql_url_manager.py
ingestion/core/: __init__.py  database_manager.py  postgres_manager.py
ingestion/document/: __init__.py  advanced_chunking.py  manager.py  metadata_migration.py  processor.py  source_manager.py  utils.py
ingestion/email/: __init__.py  account_manager.py  connector.py  crypto.py  email_manager.py  email_manager_postgresql.py  ingest.py  manager.py  orchestrator.py  processor.py  utils.py
ingestion/email/connectors/: __init__.py  base.py  exchange_connector.py  gmail_connector.py  imap_connector.py
ingestion/url/: __init__.py  manager.py  orchestrator.py  source_manager.py  utils.py
ingestion/utils/: __init__.py  chunk_persistence.py  chunker.py  crypto.py  db_utils.py  file_filters.py
rag_manager/: __init__.py  app.py  scheduler_manager.py
rag_manager/core/: __init__.py  config.py  models.py  ollama_health.py
rag_manager/data/: __init__.py  base_data.py  document_data.py  email_data.py  postgres_connection.py  url_data.py
rag_manager/managers/: __init__.py  milvus_manager.py  postgres_manager.py
rag_manager/processors/: __init__.py
rag_manager/utils/: __init__.py  disk_usage.py  logger.py
rag_manager/web/: __init__.py  routes.py  stats.py  validation.py
rerank/: __init__.py  cross_encoder.py
retrieval/: __init__.py
retrieval/document/: __init__.py  hybrid_retriever.py  manager.py  postgres_fts_retriever.py  processor.py  search_manager.py
retrieval/email/: __init__.py  hybrid_retriever.py  manager.py  postgres_fts_retriever.py  processor.py  search_manager.py
retrieval/url/: search_manager.py
static/: site.webmanifest  style.css
static/js/: index.js
templates/: dashboard.html  index.html  search.html
templates/partials/: _document_edit_modals.html  _email_accounts.html  _email_modals.html  _file_upload.html  _flash_messages.html  _head.html  _navbar.html  _processed_documents.html  _scripts.html  _staging_area.html  _stats_panel.html  _url_edit_modals.html  _url_management.html
tests/: examine_schemas.py  gmail_fixtures.py  test_advanced_chunking.py  test_cross_encoder_reranking.py  test_domain_crawler_robots.py  test_email_accounts.py  test_email_ingestion.py  test_email_refresh_errors.py  test_exchange_connector.py  test_gmail_connector.py  test_hybrid_enrichment.py  test_imap_connector.py  test_robots_txt_core.py  test_scheduler.py  test_url_manager_robots.py
tools/: README.md  check_encryption.py  cleanup_orphaned_embeddings.py  debug_milvus_documents.py  diagnose_corrupted_email.py  diagnose_email_issue.py  drop_collections.py  drop_corrupted_collection.py  drop_emails_table.py  drop_tables.py  fix_milvus_consistency.py  inspect_milvus_schema.py  inspect_vectors.py  list_milvus_collections.py  probe_url_docs.py  reset_schema.py  robots_monitor.py  robots_performance_test.py  test_milvus_manager.py
(+13 files in other folders)
